--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -1,5 +1,3 @@
-# This workflow will install Python dependencies, run tests and lint with a single version of Python
-# For more information see: https://help.github.com/actions/language-and-framework-guides/using-python-with-github-actions
 
 name: Python application
 
@@ -23,5 +21,16 @@ jobs:
       uses: actions/setup-python@v3
       with:
         python-version: "3.10"
+
+    - uses: abatilo/actions-poetry@v2.0.0
+      with:
+        poetry-version: "1.1.15"
+
+    - name: Setup Node.js
+      uses: actions/setup-node@v3
+
+    - name: Install Ganache
+      run: npm install -g ganache-cli@6.12.2
+
     - run: poetry install
     - run: poetry run pytest
